# voice-agent

./: README.md
backend/: .gitignore  LICENSE  README.md  pyproject.toml
backend/app/: main.py
backend/app/api/: routes_runs.py  routes_workflows.py
backend/app/core/: engine.py  router.py  settings.py
backend/app/domain/: models.py
backend/app/domain/nodes/: __init__.py  base.py  if_node.py  llm.py  output.py  prompt.py  setvar.py
backend/app/infra/: supabase_client.py
backend/app/infra/llm/: base.py  base_client.py  openai_client.py
backend/app/infra/repositories/: run_steps_repo.py  runs_repo.py  workflows_repo.py
backend/app/services/: run_service.py  workflow_service.py
backend/app/utils/: templating.py
backend/docs/test_results/: api_test_results_20250821_022324.md
backend/scripts/: check_db.py  init_db.sql  list_workflows.py  seed_example.py  test_api.sh  test_api_endpoints.py
backend/tests/integration/: test_workflow.py
backend/tests/unit/: test_nodes.py
